# ADS

./: CMakeLists.txt  dfvfdsverfdc.cpp
Praktikum_1a/: List.cpp  List.h  main.cpp
Praktikum_1b/: List.h  Node.h  main.cpp
Praktikum_1c/: List.h  Node.h  main.cpp
Praktikum_2a/: RingNode.h  Ringpuffer.cpp  Ringpuffer.h  main.cpp
Praktikum_2b/: CMakeLists.txt  Tree.cpp  Tree.h  TreeNode.cpp  TreeNode.h  main.cpp
Praktikum_3/: MyAlgorithms.cpp  MyAlgorithms.h  main.cpp
